<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="DoG">Difference of Gaussians</string>
    <string name="CannyEdges">Canny Edges</string>
    <string name="SobelFilter">Sobel Filter</string>
    <string name="HoughLines">Hough Lines</string>
    <string name="HoughCircles">Hough Circles</string>
    <string name="Contours">Contours</string>
    <string name="HarrisCorners">Harris Corners</string>

</resources>
